<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/splashBg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:src="@drawable/splash_bg2" />

        <RelativeLayout
            android:id="@+id/containerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/container_layout_margin">

            <ImageView
                android:text="@string/splash_welcome_txt"
                android:layout_height="match_parent"
                android:src="@drawable/welcome_message"
                android:layout_width="match_parent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <Button
                    android:id="@+id/btn_login"
                    style="@style/StrokeButtonStyle"
                    android:minWidth="@dimen/splash_btn_width"
                    android:onClick="login"
                    android:text="@string/login_btn_label"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btn_get_started"
                    style="@style/SolidButtonStyle"
                    android:layout_alignParentEnd="true"
                    android:minWidth="@dimen/splash_btn_width"
                    android:onClick="scanNow"
                    android:text="@string/get_started_btn_label"
                    android:textSize="14sp" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</layout>